forgot to add commit this, I'm still fairly new to committing

--- a/recipes/international-pancakes.html
+++ b/recipes/international-pancakes.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <head>
   <title>International Panckaes</title>
   <meta charset="utf-8">
@@ -7,7 +7,7 @@
   <body>
 
     <h1>International Pancakes</h1>
-    <img src="../img/pancakes.jpeg"
+    <img src="../img/pancakes.jpeg">
     <h2>Description</h2>
 
 <p> An easy recipe for creating the most loved breakfast meal! Pancakes!
@@ -32,6 +32,6 @@
   <li>Heat a lightly oiled griddle or frying pan over medium high heat.</li>
   <li>In a large bowl, combine flour, sugar, baking powder and salt. Stir in egg, buttermilk and oil until mixture is smooth.</li>
   <li>Pour the batter by spoonfuls into the hot pan, forming 5 inch circles. When the edges appear to harden, flip the pancakes. Cook on both sides until golden brown. Serve hot.</li>
-
+</ol>
 
     </body>
