I forgot to add the edning tag to this html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <DOCTYPE! html>
+
 <html>
 <head>
   <title>recipes</title>
@@ -9,4 +10,8 @@
 
     <h1>Odin Recipes</h1>
     <a href="recipes/international-pancakes.html">international pancakes</a>
+    <a href="recipes/bbq-chicken.html">BBQ Chicken</a>
+    <a href="recipes/rice-salad.html">Rice Salad</a>
     </body>
+
+    </html>
