--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>BBQ Chicken</title>
@@ -8,7 +8,7 @@
   <body>
 
 <h1>BBQ Chicken</h1>
-<img src="img/bbq-chicken.jpeg">
+<img src="../img/bbq-chicken.jpeg">
 
 <h2>Description</h2>
 <p> BBQ is such a delightful meal to cook, really great for gatherings with families, friends, and co-workers.
