--- a/recipes/international-pancakes.html
+++ b/recipes/international-pancakes.html
@@ -10,7 +10,7 @@
     <img src="../img/pancakes.jpeg">
     <h2>Description</h2>
 
-<p> An easy recipe for creating the most loved breakfast meal! Pancakes!
+<p> An <em>easy recipe</em> for creating the most loved breakfast meal! Pancakes!
   Loved for it's lovely gritty taste this recipe will guide you through ingredients and such to help you make the most beautiful pancakes</p>
 
   <p> If you enjoyed this recipe, please use our other recipes to help you cook amazing dishes!</p>
@@ -35,3 +35,4 @@
 </ol>
 
     </body>
+    </html>
